Refactored the path for all user add edit delete for personal information, educatin and experience.

--- a/website/templates/add_portfolio.html
+++ b/website/templates/add_portfolio.html
@@ -48,7 +48,7 @@
     {% endif %}
     <div class="col">
       <div class="card mt-4">
-        <img src="../media/{{ item.portfolio_image }}" class="card-img-top" alt="Portfolio Image">
+        <img src="../../media/{{ item.portfolio_image }}" class="card-img-top" alt="Portfolio Image">
         <div class="card-body">
           <h5 class="card-title">{{ item.title }}</h5>
           <p class="card-text">{{ item.description}}</p>
