--- a/website/templates/add_joblisting.html
+++ b/website/templates/add_joblisting.html
@@ -9,6 +9,13 @@
             <h1>Add Job Listing</h1>
                 <form method="POST" action="{% url 'add_job' %}">
                     {% csrf_token %}
+                    <p>
+                        <strong>Skills: </strong>
+                        {% for skill in request.session.job_skills %}
+                            {{ skill.1 }},
+                        {% endfor %}
+                    </p>
+
                     <div class="mb-3">
                         <label class="form-label">Active:</label>
                         {{ form.active }}
@@ -82,41 +89,6 @@
                         <label class="form-label">Benefits</label>
                         {{ form.benefits }}
                     </div>
-                    <div>
-                        <div class="form-text">
-                            To find the best candidates, add skills you are looking for. These are the same skills
-                            that job seekers have on their resume. Matching these skills with job seekers give you
-                            the best results.
-                        </div>
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_one }}
-                        {% for error in form.skill_one.errors %}
-                        <span class="text-danger">{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_two }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_three }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_four }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_five }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_six }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_seven }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_eight }}
-                    </div>
-
                     <div>
                         <button type="submit" class="btn btn-secondary">Save</button>
                     </div>
