--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -61,6 +61,7 @@
                             <th scope="col" class="text-center">Status</th>
                             <th scope="col" class="text-center">View</th>
                             <th scope="col" class="text-center">Edit</th>
+                            <th scope="col" class="text-center">Delete</th>
                         </tr>
                       </thead>
                         <tbody>
@@ -82,6 +83,10 @@
                                     <td class="text-center">
                                         <a href="{% url 'edit_job' job.pk %}"><button type="button" class="btn btn-primary mx-1"
                               style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
+                                    </td>
+                                    <td class="text-center">
+                                        <a href="{% url 'delete_job' job.pk %}"><button type="button" class="btn btn-danger mx-1"
+                                                                                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
                                     </td>
                                 </tr>
                                 {% endfor %}
