--- a/website/templates/edit_joblisting.html
+++ b/website/templates/edit_joblisting.html
@@ -6,13 +6,42 @@
 <div class="container">
     <div class="row justify-content-center">
         <div class="col-lg-6">
-            <h1>Add Job Listing</h1>
+            <h1>Edit Job Listing</h1>
                 <form method="POST">
                     {% csrf_token %}
                     <div class="mb-3">
                         <label class="form-label">Active:</label>
                         {{ form.active }}
                     </div>
+
+                    <div class="container text-center">
+                      <div class="row row-cols-4">
+                        {% for skill in jskills %}
+                          <div class="col bg-secondary mx-1 my-1 py-1 position-relative">
+                            {{ skill.skill_name }}
+                            <a href="{% url 'delete_job_skill' skill.id %}">
+                            <button
+                                    type="button"
+                                    class="btn btn-danger mx-1 float-end"
+                                    style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">X</button></a>
+                          </div>
+                        {% endfor %}
+                      </div>
+                    </div>
+
+                    <div class="d-flex" role="search">
+                        <input class="form-control me-2"
+                               type="search"
+                               name="skill_input" placeholder="Search skill"
+                               hx-get="/skill_search"
+                               hx-trigger="input changed delay:500ms, search"
+                               hx-target="#search-results"
+                               hx-indicator=".htmx-indicator">
+                    </div>
+                    <div id="search-results" class="mt-2">
+                      {% include 'skill_search.html' %}
+                    </div>
+
                     <div class="mb-3">
                         <label class="form-label">Title:</label>
                         {{ form.title }}
@@ -89,34 +118,6 @@
                             the best results.
                         </div>
                     </div>
-                    <div class="mb-3">
-                        {{ form.skill_one }}
-                        {% for error in form.skill_one.errors %}
-                        <span class="text-danger">{{ error }}</span>
-                        {% endfor %}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_two }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_three }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_four }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_five }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_six }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_seven }}
-                    </div>
-                    <div class="mb-3">
-                        {{ form.skill_eight }}
-                    </div>
-
                     <div>
                         <button type="submit" class="btn btn-secondary">Save</button>
                     </div>
