--- a/website/templates/home.html
+++ b/website/templates/home.html
@@ -13,7 +13,7 @@
         <div class="d-grid gap-2 d-md-flex justify-content-md-center">
             <form method="POST" action="job/search/">
                 {% csrf_token %}
-                <input type="text" name="search_jobs" placeholder="Skill" />
+                <input type="text" name="query" placeholder="Search" style="width: 400px;" />
                 <button type="submit" class="btn btn-primary btn-lg px-4 me-md-2">Search</button>
             </form>
         </div>
