Fix session for job id to remove it when editing and saving. Got neural search working. Export data to json and insert into Qdrant vector database.

--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -6,8 +6,8 @@
         {% for result in search_results %}
             <li>
                 <p>
-                    <strong>Name:</strong> {{ result.name }} <br />
-                    {{ result.description}}
+                    <strong>Company:</strong> {{ result.company }} <br />
+                    {{ result.about }}
                 </p>
             </li>
         {% endfor %}
