Bringing over qdrant logic into project. Still need to setup the api for Django. The qdrant logic is working.

--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -6,8 +6,8 @@
         {% for result in search_results %}
             <li>
                 <p>
-                    <strong>Company:</strong> {{ result.company }} <br />
-                    {{ result.about }}
+                    <strong> {{ result.company }}</strong> <br />
+                    {{ result.about|safe }}
                 </p>
             </li>
         {% endfor %}
