--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -1,35 +1,38 @@
 {% extends 'base.html' %}
 {% block content %}
-
-<h1>Search Results</h1>
-
-
-{% for result in search_results %}
-<div class="card mb-3" style="max-width: 540px;">
-  <div class="row g-0">
-    <div class="col-md-3 pt-3 ml-3">
-        <img src="../../media/{{ result.profile_image }}" width="125" height="125" />
+<div class="container">
+    <div class="row">
+        <div class="col-md-4">
+            <h1>Search Results</h1>
+            {% for result in search_results %}
+            <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-3 pt-3 ml-3">
+                        <img src="../../media/{{ result.profile_image }}" width="100" height="100" />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ result.title }}</h5>
+                            <p class="card-text">
+                                {{ result.company }}<br />
+                                {{ result.city }}, {{ result.state }}<br />
+                                Location: {{ result.location }} <br />
+                                Skills: {{ result.skills }}
+                            </p>
+                            <p class="card-text d-flex justify-content-end">
+                                <button hx-get="{% url 'view_job' result.id %}" hx-target="#data-container" type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="col-md-8">
+            <div id="data-container">
+                hello
+            </div>
+        </div>
     </div>
-    <div class="col-md-9">
-      <div class="card-body">
-        <h5 class="card-title">{{ result.title }}</h5>
-        <p class="card-text">
-            {{ result.company }}<br />
-            {{ result.city }}, {{ result.state }}<br />
-            Location: {{ result.location }} <br />
-            Skills: {{ result.skills }}
-        </p>
-        <p class="card-text d-flex justify-content-end">
-            <a href="#"><button type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button></a>
-        </p>
-      </div>
-    </div>
-  </div>
 </div>
-{% endfor %}
-
-{% for listing in results %}
-    {{ listing.job_id.title }}<br />
-{% endfor %}
-
 {% endblock %}
