--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -1,9 +1,8 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container">
+<div class="container mt-5">
     <div class="row">
         <div class="col-md-4">
-            <h1>Search Results</h1>
             {% for result in search_results %}
             <div class="card mb-4" style="max-width: 540px;">
                 <div class="row g-0">
