--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -1,1 +1,35 @@
-hello users
+{% extends 'base.html' %}
+{% block content %}
+<div class="container mt-5">
+    <div class="row">
+        <div class="col-md-4">
+            {% for result in search_results %}
+            <div class="card mb-4" style="max-width: 540px;">
+                <div class="row g-0">
+                    <div class="col-md-3 pt-3 ml-3">
+                        <img src="../../media/{{ result.profile_image }}" width="100" height="100" />
+                    </div>
+                    <div class="col-md-8">
+                        <div class="card-body">
+                            <h5 class="card-title">{{ result.first_name }} {{ result.last_name }}</h5>
+                            <p class="card-text">
+                                {{ result.city }}, {{ result.state }}<br />
+                                Skills: {{ result.skills }}
+                            </p>
+                            <p class="card-text d-flex justify-content-end">
+                                <button hx-get="#" hx-target="#data-container" type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button>
+                            </p>
+                        </div>
+                    </div>
+                </div>
+            </div>
+            {% endfor %}
+        </div>
+        <div class="col-md-8">
+            <div id="data-container">
+                hello
+            </div>
+        </div>
+    </div>
+</div>
+{% endblock %}
