Added summernote editor. Also rolled back all migrations and started over with clean content.

--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -24,7 +24,7 @@
                 </div>
               </div>
               <h5>{{ pii.first_name }} {{ pii.last_name }}</h5>
-              <p class="card-text">{{ pii.about }}</p>
+              <p class="card-text">{{ pii.about | safe }}</p>
 
               <h5>Personal Details</h5>
               <p class="card-text">{{ pii.city }}, {{ pii.state }}</p>
