--- a/website/templates/user_listings.html
+++ b/website/templates/user_listings.html
@@ -1,6 +1,6 @@
 {% extends 'base.html' %}
 {% block content %}
-<div class="container mt-5">
+<div class="container">
     <div class="row">
         <div class="col-md-4">
             {% for result in search_results %}
@@ -17,7 +17,7 @@
                                 Skills: {{ result.skills }}
                             </p>
                             <p class="card-text d-flex justify-content-end">
-                                <button hx-get="#" hx-target="#data-container" type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button>
+                                <button hx-get="{% url 'user_resume' result.user_id %}" hx-target="#data-container" type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button>
                             </p>
                         </div>
                     </div>
