--- a/website/templates/edit_personalinfo.html
+++ b/website/templates/edit_personalinfo.html
@@ -68,6 +68,16 @@
                     <label class="form-label">Profile Image</label>
                     {{ form.profile_image }}
                 </div>
+                <div class="mt-5">
+               <button hx-post="{% url 'delete_profile_image' %}"
+                       hx-target="#data-container"
+                       hx-swap="outerHTML"
+                       class="btn btn-danger">Delete Image</button>
+                    <div id="data-container">
+                        <img src="{{ form.instance.profile_image.url }}" class="card-img-top" alt="Portfolio Image">
+                    </div>
+
+            </div>
                 <button type="submit" class="btn btn-secondary">Save</button>
             </form>
         </div>
