--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -19,7 +19,12 @@
                                 Skills: {{ result.skills }}
                             </p>
                             <p class="card-text d-flex justify-content-end">
-                                <button hx-get="{% url 'view_job' result.id %}" hx-target="#data-container" type="button" class="btn btn-primary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button>
+                                <button
+                                        hx-get="{% url 'view_job' result.id %}"
+                                        hx-target="#data-container"
+                                        type="button"
+                                        class="btn btn-primary mx-1"
+                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View More</button>
                             </p>
                         </div>
                     </div>
