--- a/website/templates/user_profile.html
+++ b/website/templates/user_profile.html
@@ -3,6 +3,8 @@
 
 {% if user.is_authenticated %}
 
+{% include 'saved_jobs.html' %}
+
   <div class="container">
     <div class="row mt-3">
       <div class="col-md-6">
