--- a/website/templates/saved_jobs.html
+++ b/website/templates/saved_jobs.html
@@ -6,8 +6,9 @@
         <th scope="col">Company</th>
         <th scope="col">City</th>
         <th scope="col">State</th>
+        <th scope="col">Location</th>
         <th scope="col" class="text-center">View</th>
-        <th scope="col" class="text-center">Delete</th>
+        <th scope="col" class="text-center">Apply</th>
     </tr>
   </thead>
     <tbody>
@@ -17,13 +18,14 @@
                 <td>{{ sjob.job.company }}</td>
                 <td>{{ sjob.job.city }}</td>
                 <td>{{ sjob.job.state }}</td>
+                <td>{{ sjob.job.location }}</td>
                 <td class="text-center">
                     <a href="#"><button type="button" class="btn btn-secondary mx-1"
                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                 </td>
                 <td class="text-center">
-                    <a href="#"><button type="button" class="btn btn-danger mx-1"
-                                                                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Remove</button></a>
+                    <a href="#"><button type="button" class="btn btn-primary mx-1"
+                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Apply</button></a>
                 </td>
             </tr>
             {% endfor %}
