Refacotred some code and got the first result to display for job listings.

--- a/website/templates/view_job.html
+++ b/website/templates/view_job.html
@@ -84,7 +84,7 @@
                             hx-target="#removed-job"
                             hx-swap="innerHTML"
                             class="btn btn-danger"
-                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Removed Saved Job</button>
+                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Remove Saved Job</button>
                     </div>
                     {% else %}
                     <div id="saved-job">
