--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -34,7 +34,133 @@
         </div>
         <div class="col-md-8">
             <div id="data-container">
-                hello
+
+
+               <div class="container-fluid">
+                <div class="row">
+                    <div class="col-md-9 mt-3"> <!-- Left Column, 25% -->
+
+                        <div class="card-body mb-3">
+                            <h5 class="card-title">{{ first.job.title }}</h5>
+                            <p class="card-text">
+                                {{ first.job.company }}<br />
+                                {{ first.job.city }}, {{ first.job.state }}<br />
+                                {{ first.job.job_type}} / {{ first.job.location }}<br />
+                                {{ first.job.pay_bottom }} - {{ first.job.pay_top }}
+                            </p>
+                        </div>
+
+                         <div class="card-body mb-3">
+                            <h5 class="card-title">Skill Information</h5>
+                            <p class="card-text">
+                                {% for skill in first.skills %}
+                                {{ skill.skill_name }},
+                                {% endfor %}
+                           </p>
+                        </div>
+
+                        <div class="card-body mb-3">
+                            <h5 class="card-title">About Position</h5>
+                            <p class="card-text">
+                                {{ first.job.about | safe }}
+                           </p>
+                        </div>
+
+                        {% if first.job.responsibilities %}
+                        <div class="card-body mb-3">
+                            <h5 class="card-title">Responsibilities</h5>
+                            <p class="card-text">
+                                {{ first.job.responsibilities | safe }}
+                           </p>
+                        </div>
+                        {% endif %}
+
+                        {% if first.job.qualifications %}
+                        <div class="card-body mb-3">
+                            <h5 class="card-title">Qualifications</h5>
+                            <p class="card-text">
+                                {{ first.job.qualifications | safe }}<br />
+                           </p>
+                        </div>
+                        {% endif %}
+
+                        {% if first.job.benefits %}
+                        <div class="card-body mb-3">
+                            <h5 class="card-title">Benefits</h5>
+                            <p class="card-text">
+                                {{ first.job.benefits | safe }}<br />
+                           </p>
+                        </div>
+                        {% endif %}
+                    </div>
+
+                    <div class="col-md-3 mt-3">
+                        <h5>{{ first.pii.first_name }} {{ first.pii.last_name }}</h5>
+                        <p class="card-text">{{ first.pii.city }}, {{ first.pii.state }}</p>
+                        {% if user.is_authenticated %}
+                          <p class="card-text">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-envelope" viewBox="0 0 16 16">
+                                  <path d="M0 4a2 2 0 0 1 2-2h12a2 2 0 0 1 2 2v8a2 2 0 0 1-2 2H2a2 2 0 0 1-2-2zm2-1a1 1 0 0 0-1 1v.217l7 4.2 7-4.2V4a1 1 0 0 0-1-1zm13 2.383-4.708 2.825L15 11.105zm-.034 6.876-5.64-3.471L8 9.583l-1.326-.795-5.64 3.47A1 1 0 0 0 2 13h12a1 1 0 0 0 .966-.741M1 11.105l4.708-2.897L1 5.383z"/>
+                              </svg>
+                              {{ first.pii.email }}</p>
+                          <p class="card-text">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-telephone" viewBox="0 0 16 16">
+                                <path d="M3.654 1.328a.678.678 0 0 0-1.015-.063L1.605 2.3c-.483.484-.661 1.169-.45 1.77a17.6 17.6 0 0 0 4.168 6.608 17.6 17.6 0 0 0 6.608 4.168c.601.211 1.286.033 1.77-.45l1.034-1.034a.678.678 0 0 0-.063-1.015l-2.307-1.794a.68.68 0 0 0-.58-.122l-2.19.547a1.75 1.75 0 0 1-1.657-.459L5.482 8.062a1.75 1.75 0 0 1-.46-1.657l.548-2.19a.68.68 0 0 0-.122-.58zM1.884.511a1.745 1.745 0 0 1 2.612.163L6.29 2.98c.329.423.445.974.315 1.494l-.547 2.19a.68.68 0 0 0 .178.643l2.457 2.457a.68.68 0 0 0 .644.178l2.189-.547a1.75 1.75 0 0 1 1.494.315l2.306 1.794c.829.645.905 1.87.163 2.611l-1.034 1.034c-.74.74-1.846 1.065-2.877.702a18.6 18.6 0 0 1-7.01-4.42 18.6 18.6 0 0 1-4.42-7.009c-.362-1.03-.037-2.137.703-2.877z"/>
+                              </svg>
+                              {{ first.pii.phone }}</p>
+                          <p class="card-text">
+                              <svg xmlns="http://www.w3.org/2000/svg" width="16" height="16" fill="currentColor" class="bi bi-linkedin" viewBox="0 0 16 16">
+                                <path d="M0 1.146C0 .513.526 0 1.175 0h13.65C15.474 0 16 .513 16 1.146v13.708c0 .633-.526 1.146-1.175 1.146H1.175C.526 16 0 15.487 0 14.854zm4.943 12.248V6.169H2.542v7.225zm-1.2-8.212c.837 0 1.358-.554 1.358-1.248-.015-.709-.52-1.248-1.342-1.248S2.4 3.226 2.4 3.934c0 .694.521 1.248 1.327 1.248zm4.908 8.212V9.359c0-.216.016-.432.08-.586.173-.431.568-.878 1.232-.878.869 0 1.216.662 1.216 1.634v3.865h2.401V9.25c0-2.22-1.184-3.252-2.764-3.252-1.274 0-1.845.7-2.165 1.193v.025h-.016l.016-.025V6.169h-2.4c.03.678 0 7.225 0 7.225z"/>
+                              </svg>
+                              <a href="{{ first.pii.linked_in }}" target="_blank">Linked In</a>
+                          </p>
+                                {% if first.saved_job %}
+                                <div id="removed-job">
+                                 <button
+                                        hx-post="{% url 'remove_job' first.job.id %}"
+                                        hx-target="#removed-job"
+                                        hx-swap="innerHTML"
+                                        class="btn btn-danger"
+                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Remove Saved Job</button>
+                                </div>
+                                {% else %}
+                                <div id="saved-job">
+                                <button
+                                        hx-post="{% url 'save_job' first.job.id %}"
+                                        hx-target="#saved-job"
+                                        hx-swap="innerHTML"
+                                        class="btn btn-primary"
+                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Job</button>
+                                </div>
+                                {% endif %}
+
+                        {% else %}
+                        You must be logged in to view all details<br />
+                            <form method="POST" action="{% url 'login' %}" class="d-flex flex-column">
+                                {% csrf_token %}
+                                <div class="row">
+                                  <div class="col">
+                                    <input type="text" name="username" placeholder="Username" required class="form-control" aria-label="Username">
+                                  </div>
+                                </div>
+                                <div class="row mt-2">
+                                  <div class="col">
+                                    <input type="password" name="password" placeholder="Password" required class="form-control" aria-label="Password">
+                                  </div>
+                                </div>
+                                <div class="row mt-2">
+                                  <div class="col d-flex justify-content-end">
+                                    <button type="submit" class="btn btn-primary btn-block">Login</button>
+                                  </div>
+                                </div>
+                              </form>
+                        {% endif %}
+                    </div>
+
+    </div>
+</div>
+
+
             </div>
         </div>
     </div>
