Recruiter profile lists all the saved users and their resumes.

--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -54,7 +54,7 @@
                 </div>
               </div>
                 <div class="col 8">
-                  <div>
+                    <h3>Job listings</h3>
                     <table class="table table-hover table-bordered">
                       <thead class="table-dark">
                         <tr>
@@ -65,7 +65,7 @@
                             <th scope="col" class="text-center">Status</th>
                             <th scope="col" class="text-center">View</th>
                             <th scope="col" class="text-center">Edit</th>
-                            <th scope="col" class="text-center">Delete</th>
+                            <th scope="col" class="text-center">Action</th>
                         </tr>
                       </thead>
                         <tbody>
@@ -96,7 +96,37 @@
                                 {% endfor %}
                         </tbody>
                         </table>
-                    </div>
+
+
+                    <h3>Saved Resumes</h3>
+                    <table class="table table-hover table-bordered">
+                      <thead class="table-dark">
+                        <tr>
+                            <th scope="col">Name</th>
+                            <th scope="col">City</th>
+                            <th scope="col">State</th>
+                            <th scope="col" class="text-center">Resume</th>
+                            <th scope="col" class="text-center">Action</th>
+                        </tr>
+                      </thead>
+                        <tbody>
+                        {% for user in users %}
+                        <tr>
+                            {% with personal_info=user.saved.personalinformation_set.first %}
+                            <td>{{ personal_info.first_name }} {{ personal_info.last_name }}</td>
+                            <td>{{ personal_info.city }}</td>
+                            <td>{{ personal_info.state }}</td>
+                            <td class="text-center">
+                                <a href="#"><button type="button" class="btn btn-secondary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                            </td>
+                            <td class="text-center">
+                                <a href="#"><button type="button" class="btn btn-danger mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
+                            </td>
+                            {% endwith %}
+                        </tr>
+                        {% endfor %}
+                        </tbody>
+                    </table>
                 </div>
         </div>
     </div>
