Recruiter can click on view for job listing on profile page and view job listing.

--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -81,7 +81,7 @@
                                     <td class="table-danger text-center">In-Active</td>
                                     {% endif %}
                                     <td class="text-center">
-                                        <a href="{% url 'view_job' job.pk %}"><button type="button" class="btn btn-secondary mx-1"
+                                        <a href="{% url 'rec_view_job' job.pk %}"><button type="button" class="btn btn-secondary mx-1"
                                                            style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                                     </td>
                                     <td class="text-center">
