--- a/website/templates/all_resume.html
+++ b/website/templates/all_resume.html
@@ -1,10 +1,10 @@
 {% extends 'base.html' %}
 {% block content %}
-    <div class="container">
+ <div class="container">
         <div class="row">
             <div class="col-2"></div>
                 <div class="col 10">
-                   {% include 'view_job.html' %}
+                   {% include 'user_resume.html' %}
                 </div>
         </div>
     </div>
