User can click view resume on profile page and resume page is styled.

--- a/website/templates/saved_jobs.html
+++ b/website/templates/saved_jobs.html
@@ -20,7 +20,7 @@
                 <td>{{ sjob.job.state }}</td>
                 <td>{{ sjob.job.location }}</td>
                 <td class="text-center">
-                    <a href="{% url 'rec_view_job' sjob.job.id %}"><button type="button" class="btn btn-secondary mx-1"
+                    <a href="{% url 'all_view_job' sjob.job.id %}"><button type="button" class="btn btn-secondary mx-1"
                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                 </td>
                 <td class="text-center">
