--- a/website/templates/user_navbar.html
+++ b/website/templates/user_navbar.html
@@ -2,6 +2,6 @@
      <div class="p-3">
         <a href="/user/profile"><button type="button" class="btn btn-primary">My Profile</button></a>
         <a href="/user/portfolio/add"><button type="button" class="btn btn-primary">My Portfolio</button></a>
-        <a href="{% url 'user_resume' user.pk %}" target="_blank"><button type="button" class="btn btn-primary">View Resume</button></a>
+        <a href="{% url 'all_resume' user.pk %}" target="_blank"><button type="button" class="btn btn-primary">View Resume</button></a>
      </div>
 </div>
