User can apply to jobs and recruiter can view cover letter and resume

--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -133,7 +133,11 @@
                                         style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Job</button>
                                 </div>
                                 {% endif %}
-
+                                    <div class="mt-3">
+                                        <a href="{% url 'apply_job' first.job.id %}">
+                                            <button class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Apply to Job</button>
+                                        </a>
+                                    </div>
                         {% else %}
                         You must be logged in to view all details<br />
                             <form method="POST" action="{% url 'login' %}" class="d-flex flex-column">
