--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -53,11 +53,40 @@
                 </div>
               </div>
                 <div class="col 8">
+
+                    <h3>Applications</h3>
+                    <table class="table table-hover table-bordered">
+                      <thead class="table-dark">
+                        <tr>
+                            <th scope="col">Job Title</th>
+                            <th scope="col">Company</th>
+                            <th scope="col" class="text-center">View</th>
+                            <th scope="col" class="text-center">Action</th>
+                        </tr>
+                      </thead>
+                        <tbody>
+                                {% for appl in applied %}
+                                <tr>
+                                    <td>{{ appl.job__title }}</td>
+                                    <td>{{ appl.job__company }}</td>
+                                    <td class="text-center">
+                                        <a href="{% url 'view_cover_letter' appl.job_id appl.user_id %}"><button type="button" class="btn btn-secondary mx-1"
+                                                           style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                                    </td>
+                                    <td class="text-center">
+                                        <a href="#"><button type="button" class="btn btn-danger mx-1"
+                                                                                      style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
+                                    </td>
+                                </tr>
+                                {% endfor %}
+                        </tbody>
+                    </table>
+
                     <h3>Job listings</h3>
                     <table class="table table-hover table-bordered">
                       <thead class="table-dark">
                         <tr>
-                            <th scope="col">Title</th>
+                            <th scope="col">Job Title</th>
                             <th scope="col">Company</th>
                             <th scope="col">City</th>
                             <th scope="col">State</th>
@@ -94,7 +123,7 @@
                                 </tr>
                                 {% endfor %}
                         </tbody>
-                        </table>
+                    </table>
 
 
                     <h3>Saved Resumes</h3>
