--- a/website/templates/saved_jobs.html
+++ b/website/templates/saved_jobs.html
@@ -8,7 +8,7 @@
         <th scope="col">State</th>
         <th scope="col">Location</th>
         <th scope="col" class="text-center">View</th>
-        <th scope="col" class="text-center">Apply</th>
+        <th scope="col" class="text-center">Remove</th>
     </tr>
   </thead>
     <tbody>
@@ -24,8 +24,9 @@
                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                 </td>
                 <td class="text-center">
-                    <a href="#"><button type="button" class="btn btn-primary mx-1"
-                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Apply</button></a>
+                        <a href="#">
+                            <button class="btn btn-danger" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Remove</button>
+                        </a>
                 </td>
             </tr>
             {% endfor %}
