--- a/website/templates/view_job.html
+++ b/website/templates/view_job.html
@@ -1,5 +1,5 @@
 {% block content %}
-<div class="container-fluid">
+<div class="container-fluid" xmlns="http://www.w3.org/1999/html">
     <div class="row">
         <div class="col-md-9 mt-3"> <!-- Left Column, 25% -->
 
@@ -98,6 +98,11 @@
                             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Job</button>
                     </div>
                     {% endif %}
+                    <div class="mt-3">
+                        <a href="{% url 'apply_job' job.id %}">
+                            <button class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Apply to Job</button>
+                        </a>
+                    </div>
                 {% endif %}
 
             {% else %}
