--- a/website/templates/view_cover_letter.html
+++ b/website/templates/view_cover_letter.html
@@ -54,7 +54,10 @@
               </div>
                 <div class="col 8">
                     <div>
-                        User Personal Info
+                        {{ aj.user.first_name}} {{ aj.user.last_name}}<br />
+                        {{ aj.user.email }}<br />
+                        {{ aj.user.phone }}<br />
+                        {{ aj.user.linked_in }}
                     </div>
 
                     <div class="mt-3">
