--- a/website/templates/recruiter_profile.html
+++ b/website/templates/recruiter_profile.html
@@ -142,17 +142,15 @@
                         <tbody>
                         {% for user in users %}
                         <tr>
-                            {% with personal_info=user.saved.personalinformation_set.first %}
-                            <td>{{ personal_info.first_name }} {{ personal_info.last_name }}</td>
-                            <td>{{ personal_info.city }}</td>
-                            <td>{{ personal_info.state }}</td>
+                            <td>{{ user.saved.personal_information.first_name }} {{ user.saved.personal_information.last_name }}</td>
+                            <td>{{ user.saved.personal_information.city }}</td>
+                            <td>{{ user.saved.personal_information.state }}</td>
                             <td class="text-center">
-                                <a href="{% url 'all_resume' personal_info.user_id.id %}"><button type="button" class="btn btn-secondary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
+                                <a href="{% url 'all_resume' user.saved_id %}"><button type="button" class="btn btn-secondary mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                             </td>
                             <td class="text-center">
                                 <a href="#"><button type="button" class="btn btn-danger mx-1" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Delete</button></a>
                             </td>
-                            {% endwith %}
                         </tr>
                         {% endfor %}
                         </tbody>
