--- a/website/templates/user_resume.html
+++ b/website/templates/user_resume.html
@@ -92,7 +92,7 @@
                     {% if saved_user %}
                     <div id="removed-user">
                      <button
-                            hx-post="{% url 'remove_user' pii.user_id.id %}"
+                            hx-post="{% url 'remove_user' pii.user.id %}"
                             hx-target="#removed-user"
                             hx-swap="innerHTML"
                             class="btn btn-danger"
@@ -101,7 +101,7 @@
                     {% else %}
                     <div id="saved-user">
                     <button
-                            hx-post="{% url 'save_user' pii.user_id.id %}"
+                            hx-post="{% url 'save_user' pii.user.id %}"
                             hx-target="#saved-user"
                             hx-swap="innerHTML"
                             class="btn btn-primary"
