--- a/website/templates/view_cover_letter.html
+++ b/website/templates/view_cover_letter.html
@@ -20,10 +20,6 @@
 
                       <h5 class="card-title">{{ pii.first_name }} {{ pii.last_name }}</h5>
                     </div>
-                    <div class="col-2 d-flex justify-content-end">
-                      <a href="{% url 'edit_personalinfo' pii.pk %}"><button type="button" class="btn btn-primary mx-1"
-                                  style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Edit</button></a>
-                    </div>
                   </div>
                   <p class="card-text">{{ pii.about | safe }}</p>
 
@@ -53,15 +49,8 @@
                 </div>
               </div>
                 <div class="col 8">
-                    <div>
-                        {{ aj.user.first_name}} {{ aj.user.last_name}}<br />
-                        {{ aj.user.email }}<br />
-                        {{ aj.user.phone }}<br />
-                        {{ aj.user.linked_in }}
-                    </div>
-
                     <div class="mt-3">
-                        Dear {{ pii.first_name }} {{ pii.last_name }},
+                        Dear [Place Recruiter Name Here],
                         <p>{{ aj.cover_letter | safe }}</p>
 
                         <!-- Resume Start -->
