User profile page. The user can remove saved jobs. Redirecting back to page for now. Will using htmx later to refesh table.

--- a/website/templates/saved_jobs.html
+++ b/website/templates/saved_jobs.html
@@ -24,7 +24,7 @@
                                        style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">View</button></a>
                 </td>
                 <td class="text-center">
-                        <a href="#">
+                        <a href="{% url 'user_profile_remove_job' sjob.job.id %}">
                             <button class="btn btn-danger" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Remove</button>
                         </a>
                 </td>
