--- a/website/templates/job_listings.html
+++ b/website/templates/job_listings.html
@@ -19,6 +19,9 @@
                                 Skills: {{ result.skills }}
                             </p>
                             <p class="card-text d-flex justify-content-end">
+                                {% if result.applied %}
+                                <span class="badge bg-success align-self-center p-2">Applied</span>
+                                {% endif %}
                                 <button
                                         hx-get="{% url 'view_job' result.id %}"
                                         hx-target="#data-container"
@@ -34,7 +37,6 @@
         </div>
         <div class="col-md-8">
             <div id="data-container">
-
 
                <div class="container-fluid">
                 <div class="row">
@@ -135,9 +137,13 @@
                                 </div>
                                 {% endif %}
                                     <div class="mt-3">
+                                        {% if applied %}
+                                        <span class="badge bg-success align-self-center p-2">Applied</span>
+                                        {% else %}
                                         <a href="{% url 'apply_job' first.job.id %}">
                                             <button class="btn btn-primary" style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Apply to Job</button>
                                         </a>
+                                        {% endif %}
                                     </div>
                             {% endif %}
 
