--- a/website/templates/user_resume.html
+++ b/website/templates/user_resume.html
@@ -89,6 +89,7 @@
               </svg>
               <a href="{{ pii.linked_in }}" target="_blank">Linked In</a></p>
 
+                {% if request.session.recruiter == True %}
                     {% if saved_user %}
                     <div id="removed-user">
                      <button
@@ -108,6 +109,7 @@
                             style="--bs-btn-padding-y: .25rem; --bs-btn-padding-x: .5rem; --bs-btn-font-size: .75rem;">Save Resume</button>
                     </div>
                     {% endif %}
+                {% endif %}
 
         {% else %}
         You must be logged in to view all details<br />
